# lembrame

./: .gitignore  README.md  com.antergos.Lembrame.json  meson.build
data/: application.css  com.antergos.Lembrame.appdata.xml.in  com.antergos.Lembrame.busname  com.antergos.Lembrame.data.gresource.xml  com.antergos.Lembrame.desktop.in  com.antergos.Lembrame.gschema.xml  greeting-view.ui  main.ui  meson.build
lib/: lembrame-libnacl.py  meson.build
packaging/antergos/: PKGBUILD
src/: com.antergos.Lembrame.in  com.antergos.Lembrame.src.gresource.xml  main.js  mainView.js  task.js  upload.js  util.js  window.js
src/tasks/: background.js  bashrc.js  displayManager.js  gnomeShell.js  gnomeShellTheme.js  gtkTheme.js  iconsTheme.js  pacman.js  run.js  screensaver.js
